updating logo, site, readmes

--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,15 @@
   align-items: center;
   padding: 24px;
 }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.footer a {
+  text-decoration: none;
+  color: #162127;
+}
