--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,13 @@
 }
 
 .app {
+  padding-bottom: 4em;
+}
+
+#root {
   background-color: #e7edf1;
-  height: 100vh;
+  min-height: 100%;
+  position: relative;
 }
 
 .subtitle {
@@ -13,12 +18,11 @@
 }
 
 .download {
-  margin-top: 27px;
   margin-left: auto;
   margin-right: auto;
   width: 250px;
   text-align: center;
-  background-color: #a6598c;
+  background-color: #59a558;
   padding: 9px;
 }
 
@@ -32,6 +36,7 @@
 
 .explanation {
   width: 30%;
+  font-size: 1.2rem;
 }
 
 .demo {
@@ -45,12 +50,13 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 24px;
+  padding: 18px;
 }
 
 .footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
+  height: 4em;
   text-align: center;
   width: 100%;
 }
