--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
-body {
+body, html {
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
   font-family: "Thasadith", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
